Fix body overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@
 body {
   display: grid;
   min-height: 100vh;
-  width: 100vw;
   margin: 0;
   grid-template-areas: "header" "main" "footer";
 }
